--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish (NuGet)
 
 on:
   workflow_run:
-    workflows: ["Build (.NET)"]
+    workflows: ["Build"]
     branches: [ master ]
     types:
       - completed
