--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   workflow_run:
     workflows: ["Build"]
-    branches: [ master ]
+    branches: [ main ]
     types:
       - completed
 
