--- a/Htl.Utils/Htl.Utils.csproj
+++ b/Htl.Utils/Htl.Utils.csproj
@@ -11,7 +11,7 @@ Special credits to Gerald Köck!</Description>
     <RepositoryUrl>https://github.com/jfuerlinger/htl-utils</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.4</Version>
+    <Version>{MAJOR.MINOR.PATCH}</Version>
   </PropertyGroup>
 
   <ItemGroup>
