--- a/Htl.Utils/Htl.Utils.csproj
+++ b/Htl.Utils/Htl.Utils.csproj
@@ -11,11 +11,13 @@ Special credits to Gerald Köck!</Description>
     <RepositoryUrl>https://github.com/jfuerlinger/htl-utils</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>{MAJOR.MINOR.PATCH}</Version>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.3" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
 </Project>
